--- a/res/xml/device_info_settings.xml
+++ b/res/xml/device_info_settings.xml
@@ -142,6 +142,12 @@
                 android:title="@string/firmware_version"
                 android:summary="@string/device_info_default"/>
 
+        <!-- OptimizedCM -->
+        <Preference android:key="optimized_cm"
+                style="?android:preferenceInformationStyle"
+                android:title="@string/optimized_cm"
+                android:summary="@string/optimized_cm_summary" />
+
         <!-- Device FCC equipment id -->
         <Preference android:key="fcc_equipment_id"
                 style="?android:preferenceInformationStyle"
